# aetherclaw

./: .gitignore  Dockerfile  docker-compose.yml  fly.toml
.github/workflows/: ci.yml
aetherclaw/: .env.example  Caddyfile  Cargo.toml  Dockerfile  Dockerfile.multiarch  README.md  docker-compose.prod.yml  docker-compose.yml
aetherclaw/.github/workflows/: deploy.yml
aetherclaw/k8s/: deployment.yaml  hpa.yaml  namespace.yaml  service.yaml
aetherclaw/src/: config.rs  main.rs
aetherclaw/src/agent/: cot.rs  mod.rs  orchestrator.rs  specialized.rs
aetherclaw/src/bus/: mod.rs
aetherclaw/src/channels/: manager.rs
aetherclaw/src/health/: mod.rs
aetherclaw/src/heartbeat/: mod.rs
aetherclaw/src/llm/: mod.rs
aetherclaw/src/tools/: mod.rs
aetherclaw/src/tui/: init_wizard.rs  mod.rs
aetherclaw/src/web/: mod.rs
aetherclaw/src/web/static/: index.html
app/: index.html  vite.config.ts
app/src/: App.tsx
